# cuda-tcp-llama.cpp

./: .gitignore  CMakeLists.txt  README.md  fix_ucx_transport.sh  rebuild-script-logs.txt  rebuild_script.sh  test_backend.sh  ucx-10-logs.txt  ucx-llama-multiple-terminal-logs.txt
include/cc50/: common.hpp  protocol.hpp
include/cc50/backend/: backend.hpp  llama_server_backend.hpp  toy_backend.hpp
include/cc50/transport/: tcp_transport.hpp  transport.hpp  ucx_transport.hpp
others/: error-logs.txt
scripts/: how_to_run.sh  run_llama_server.sh
src/: client.cpp  server.cpp
src/backend/: llama_server_backend.cpp  toy_backend.cu
src/transport/: tcp_transport.cpp  ucx_transport.cpp  ucx_transport.cpp.backup.1766310749
